# winkey

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  msdm.rs
src/platform/: freebsd.rs  linux.rs  mod.rs  openbsd.rs  windows.rs
