[package]
name = "winkey"
version = "0.1.0"
edition = "2024"
description = "Extract the Windows product key from UEFI/BIOS firmware"
license = "MIT"

[dependencies]

[target.'cfg(target_os = "freebsd")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = -1 }
